# teapop

./: README.md
teapop/: Makefile.in  configure
teapop/config/: Makefile.in  config.h.in  configure  configure.in  mkinstalldirs
teapop/contrib/: README  cryptpass.diff  indent.pro  inetmail.patch  popauther3.pl  teapop+exim.txt  teapop-last.patch  virtualmail.html
teapop/contrib/java/: Authentication.java  README  SampleAuth.java  User.java  teapop.properties
teapop/contrib/rpm/: teapop.init.d  teapop.spec  teapop.stunnel  teapop.stunnel4  teapop.stunnel4.conf  teapop.xinetd
teapop/doc/: ChangeLog  INSTALL  TODO
teapop/etc/: Makefile.in  teapop.passwd.in
teapop/include/: flock.h  lockf.h  md5.h  pop_auth.h  pop_cmds.h  pop_dele.h  pop_dnld.h  pop_file.h  pop_hello.h  pop_lock.h  pop_maildir.h  pop_mbox.h  pop_parse.h  pop_passwd.h  pop_popsmtp.h  pop_signal.h  pop_socket.h  pop_stat.h  pop_strings.h  teapop.h  version.h
teapop/man/: Makefile.in  teapop.8.in
teapop/teapop/: Makefile.in  easy_java.c  easy_java.h  flock.c  license  lockf.c  md5c.c  pop_auth.c  pop_cmd_capa.c  pop_cmd_dele.c  pop_cmd_last.c  pop_cmd_list.c  pop_cmd_noop.c  pop_cmd_retr.c  pop_cmd_rset.c  pop_cmd_stat.c  pop_cmd_top.c  pop_cmd_uidl.c  pop_dele.c  pop_dnld.c  pop_file.c  pop_hello.c  pop_java.c  pop_ldap.c  pop_lock.c  pop_maildir.c  pop_mbox.c  pop_mysql.c  pop_parse.c  pop_passwd.c  pop_pgsql.c  pop_popsmtp.c  pop_popsmtp_drac.c  pop_popsmtp_file.c  pop_popsmtp_whoson.c  pop_priv.c  pop_profil.c  pop_signal.c  pop_socket.c  pop_stat.c  (+3 more)
